--- a/assets/styles/scss/components/_main.scss
+++ b/assets/styles/scss/components/_main.scss
@@ -1,5 +1,7 @@
 .background-image{
     position: fixed;
+    background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))), url('../../../assets/images/background.jpg');
+    background: -o-linear-gradient(bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../../../assets/images/background.jpg');
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../../../assets/images/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -14,9 +16,16 @@
     bottom: 150px;
     right: 70px;
     position: fixed;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
     z-index: 9999;
     width: 370px;
     height: 410px;
@@ -53,6 +62,8 @@
     bottom: 96px;
     right: 96px;
     img {
+        -webkit-transition: 0.1s;
+        -o-transition: 0.1s;
         transition: 0.1s;
         @include laptop{
             position: fixed;
@@ -61,7 +72,8 @@
             right: 76px;
         }
         &:hover{
-            filter: hue-rotate(2deg) brightness(0.7) contrast(1.2);
+            -webkit-filter: hue-rotate(2deg) brightness(0.7) contrast(1.2);
+                    filter: hue-rotate(2deg) brightness(0.7) contrast(1.2);
         }
         @include break(1100px) {
             width: 30px;
@@ -115,11 +127,17 @@
 
     .discoveryContent{
         @include flex-spaceBetween;
-        column-gap: var(--container-gap);
-        align-items: center;
+        -webkit-column-gap: var(--container-gap);
+           -moz-column-gap: var(--container-gap);
+                column-gap: var(--container-gap);
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
 
         @include break(410px) {
-            column-gap: 3px;
+            -webkit-column-gap: 3px;
+               -moz-column-gap: 3px;
+                    column-gap: 3px;
         }
 
         .discoveryNews{
@@ -190,6 +208,8 @@
                 }
 
                 &:hover{
+                    background: -webkit-gradient(linear, left top, right top, color-stop(-15%, #82CC26), color-stop(126.67%, #82CC26));
+                    background: -o-linear-gradient(left, #82CC26 -15%, #82CC26 126.67%);
                     background: linear-gradient(90deg, #82CC26 -15%, #82CC26 126.67%);
                 }
 
@@ -212,6 +232,8 @@
                     margin: 32px 0 20px 0;
                 }
                 &:hover{
+                    background: -webkit-gradient(linear, left top, right top, color-stop(-15%, #82CC26), color-stop(126.67%, #82CC26));
+                    background: -o-linear-gradient(left, #82CC26 -15%, #82CC26 126.67%);
                     background: linear-gradient(90deg, #82CC26 -15%, #82CC26 126.67%);
                 }
 
@@ -250,12 +272,19 @@
     }
     .whoAmI-content{
         @include flex-spaceBetween;
-        align-items: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         position: relative;
-        column-gap: var(--container-gap);
+        -webkit-column-gap: var(--container-gap);
+           -moz-column-gap: var(--container-gap);
+                column-gap: var(--container-gap);
 
         @include break(520px) {
-            flex-direction: column;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+                -ms-flex-direction: column;
+                    flex-direction: column;
             row-gap: 16px;
         }
 
@@ -296,6 +325,8 @@
         .whoAmI-text{
             max-width: 890px;
             @include container;
+            -webkit-transition: 0.2s;
+            -o-transition: 0.2s;
             transition: 0.2s;
             &:hover{
                 background-color: #3D699626;
@@ -341,6 +372,8 @@
                 }
 
                 &:hover{
+                    background: -webkit-gradient(linear, left top, right top, color-stop(-15%, #82CC26), color-stop(126.67%, #82CC26));
+                    background: -o-linear-gradient(left, #82CC26 -15%, #82CC26 126.67%);
                     background: linear-gradient(90deg, #82CC26 -15%, #82CC26 126.67%);
                 }
             }
@@ -368,11 +401,17 @@
     .profileContent{
         position: relative;
         @include flex-spaceBetween;
-        align-items: center;
-        column-gap: var(--container-gap);
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-column-gap: var(--container-gap);
+           -moz-column-gap: var(--container-gap);
+                column-gap: var(--container-gap);
         .profileText{
             @include container;
             width: 610px;
+            -webkit-transition: 0.2s;
+            -o-transition: 0.2s;
             transition: 0.2s;
             @include tablet {
                 padding-bottom: 16px;
@@ -390,18 +429,31 @@
             }
 
             .profileObject{
+                display: -webkit-box;
+                display: -ms-flexbox;
                 display: flex;
-                flex-direction: column;
+                -webkit-box-orient: vertical;
+                -webkit-box-direction: normal;
+                    -ms-flex-direction: column;
+                        flex-direction: column;
                 row-gap: 30px;
                 @include tablet {
                     row-gap: 16px;
                 }
                 div{
+                    display: -webkit-box;
+                    display: -ms-flexbox;
                     display: flex;
-                    align-items: flex-end;
-                    column-gap: 10px;
+                    -webkit-box-align: end;
+                        -ms-flex-align: end;
+                            align-items: flex-end;
+                    -webkit-column-gap: 10px;
+                       -moz-column-gap: 10px;
+                            column-gap: 10px;
                     @include tablet {
-                        column-gap: 8px;
+                        -webkit-column-gap: 8px;
+                           -moz-column-gap: 8px;
+                                column-gap: 8px;
                     }
                     img{
                         @include laptop {
@@ -428,6 +480,14 @@
                         }
 
                         span{
+                            background: -o-linear-gradient(38.49deg, #24E9A6 72.15%, rgba(14, 188, 218, 0) 94.84%),
+                                        -o-linear-gradient(6.72deg, #24E9A6 61.73%, rgba(14, 188, 218, 0) 75.83%),
+                                        -o-linear-gradient(46.8deg, #24E9A6 75.79%, rgba(14, 188, 218, 0) 115.95%),
+                                        -o-linear-gradient(36.48deg, #24E9A6 71.26%, rgba(14, 188, 218, 0) 124.78%),
+                                        -o-linear-gradient(148.82deg, #24E9A6 68.85%, rgba(14, 188, 218, 0) 98.71%),
+                                        -o-linear-gradient(37.85deg, #24E9A6 71.86%, rgba(14, 188, 218, 0) 138.89%),
+                                        -o-linear-gradient(36.68deg, #B9F272 71.34%, rgba(131, 244, 94, 0) 104.75%),
+                                        -o-linear-gradient(bottom, #FFFFFF, #FFFFFF);
                             background: linear-gradient(51.51deg, #24E9A6 72.15%, rgba(14, 188, 218, 0) 94.84%),
                                         linear-gradient(83.28deg, #24E9A6 61.73%, rgba(14, 188, 218, 0) 75.83%),
                                         linear-gradient(43.2deg, #24E9A6 75.79%, rgba(14, 188, 218, 0) 115.95%),
@@ -520,14 +580,23 @@
         
         .communication_container{
             color: white;
+            display: -ms-grid;
             display: grid;
+            -ms-grid-columns: 1fr 16px 1fr 16px 1fr;
             grid-template-columns: repeat(3, 1fr);
-            column-gap: 16px;
+            -webkit-column-gap: 16px;
+               -moz-column-gap: 16px;
+                    column-gap: 16px;
     
             @include break(720px) {
+                display: -webkit-box;
+                display: -ms-flexbox;
                 display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
+                -ms-flex-wrap: wrap;
+                    flex-wrap: wrap;
+                -webkit-box-pack: center;
+                    -ms-flex-pack: center;
+                        justify-content: center;
                 row-gap: 16px;
             }
 
@@ -539,10 +608,19 @@
                 padding: 32px 0 104px 0;
                 background: rgba(0, 16, 35, 0.4);
                 border-radius: 30px;
+                -webkit-transition: .3s;
+                -o-transition: .3s;
                 transition: .3s;
+                display: -webkit-box;
+                display: -ms-flexbox;
                 display: flex;
-                flex-direction: column;
-                align-items: center;
+                -webkit-box-orient: vertical;
+                -webkit-box-direction: normal;
+                    -ms-flex-direction: column;
+                        flex-direction: column;
+                -webkit-box-align: center;
+                    -ms-flex-align: center;
+                        align-items: center;
                 @include laptop{
                     padding: 32px 0 64px 0;
                 }
@@ -565,7 +643,9 @@
 
                 @include break(550px) {
                     width: 168px;
-                    column-gap: 16px;
+                    -webkit-column-gap: 16px;
+                       -moz-column-gap: 16px;
+                            column-gap: 16px;
                 }
 
                 &:nth-child(1){
@@ -573,11 +653,17 @@
                 }
                 
                 .communication_img {
+                    display: -webkit-box;
+                    display: -ms-flexbox;
                     display: flex;
-                    justify-content: center;
+                    -webkit-box-pack: center;
+                        -ms-flex-pack: center;
+                            justify-content: center;
                     margin-bottom: 16px;
                     padding: 25px;
                     border-radius: 40px;
+                    -webkit-transition: 0.15s;
+                    -o-transition: 0.15s;
                     transition: 0.15s;
                     @include laptop{
                         border-radius: 34px;
@@ -628,8 +714,10 @@
                         }
                     }
                     &.img-3{
+                        background: -o-linear-gradient(81.61deg, #B9F272 93.57%, rgba(131, 244, 94, 0) 159.27%);
                         background: linear-gradient(8.39deg, #B9F272 93.57%, rgba(131, 244, 94, 0) 159.27%);
                         &:hover{
+                            background: -o-linear-gradient(81.61deg, #7AB631 93.57%, rgba(131, 244, 94, 0) 159.27%);
                             background: linear-gradient(8.39deg, #7AB631 93.57%, rgba(131, 244, 94, 0) 159.27%);
                         }
                     }
@@ -696,8 +784,12 @@
 
 .creators{
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: right;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
     padding: 210px 200px 0 400px;
 
 
@@ -767,18 +859,29 @@
     .creators-container{
         z-index: 4;
         width: 1184px;
+        display: -ms-grid;
         display: grid;
+        -ms-grid-columns: 1fr 8px 1fr 8px 1fr;
         grid-template-columns: repeat(3, 1fr);
-        align-items: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
 
         @include tablet {
-            column-gap: 16px;
+            -webkit-column-gap: 16px;
+               -moz-column-gap: 16px;
+                    column-gap: 16px;
         }
 
         @include break(670px) {
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            -ms-flex-wrap: wrap;
+                flex-wrap: wrap;
+            -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
             row-gap: 16px;
         }
 
@@ -791,7 +894,8 @@
                 background: rgba(11, 61, 112, 0.1);
                 .creators-icon{
                         background-color: #164D914D;
-                        filter: hue-rotate(5deg) brightness(0.8) contrast(1.3);
+                        -webkit-filter: hue-rotate(5deg) brightness(0.8) contrast(1.3);
+                                filter: hue-rotate(5deg) brightness(0.8) contrast(1.3);
 
                 }
             }
@@ -802,7 +906,8 @@
                     background: rgba(61, 105, 150, 0.1);
                     .creators-icon{
                             background-color: #001C3E80;
-                            filter: none;
+                            -webkit-filter: none;
+                                    filter: none;
                     }
                 }
             }
@@ -820,6 +925,8 @@
         .creators-item{
             padding: 20px;
             background-color: rgba(61, 105, 150, 0.1);
+            -webkit-transition: 0.2s;
+            -o-transition: 0.2s;
             transition: 0.2s;
             @include break(960px) {
                 padding: 10px;
@@ -830,7 +937,8 @@
                         background: rgba(11, 61, 112, 0.1);
                         .creators-icon{
                                 background-color: #164D914D;
-                                filter: hue-rotate(5deg) brightness(0.8) contrast(1.3);
+                                -webkit-filter: hue-rotate(5deg) brightness(0.8) contrast(1.3);
+                                        filter: hue-rotate(5deg) brightness(0.8) contrast(1.3);
         
                         }
                 }
@@ -848,10 +956,18 @@
                 height: 80px;
                 background-color: rgba(0, 28, 62, 0.5);
                 border-radius: 20px;
+                display: -webkit-box;
+                display: -ms-flexbox;
                 display: flex;
-                align-items: center;
-                justify-content: center;
+                -webkit-box-align: center;
+                    -ms-flex-align: center;
+                        align-items: center;
+                -webkit-box-pack: center;
+                    -ms-flex-pack: center;
+                        justify-content: center;
                 margin-bottom: 32px;
+                -webkit-transition: 0.2s;
+                -o-transition: 0.2s;
                 transition: 0.2s;
                 @include laptop {
                     width: 70px;
